syntax = "proto3";

option java_package = "grpc";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc register (RegisterRequest) returns (AuthResponse);
  rpc login (LoginRequest) returns (AuthResponse);
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message AuthResponse {
  int32 resultCode = 1;
  string message = 2;
}
